samples/_failures_safe/1761320250_34ce24_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_21024f89.c: In function ‘main’:
./samples/SAFE/__tmp_21024f89.c:164:29: error: missing terminating " character
  164 |             fprintf(stderr, "Invalid
      |                             ^~~~~~~~
./samples/SAFE/__tmp_21024f89.c:164:13: error: expected expression at end of input
  164 |             fprintf(stderr, "Invalid
      |             ^~~~~~~
./samples/SAFE/__tmp_21024f89.c:164:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_21024f89.c:164:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_21024f89.c:164:13: error: expected declaration or statement at end of input
